# haxor

./: LICENSE  README.md
haxor-agents/: Cargo.toml
haxor-agents/crates/haxor-cli/: Cargo.toml
haxor-agents/crates/haxor-cli/src/: main.rs
haxor-agents/crates/haxor-core/: Cargo.toml
haxor-agents/crates/haxor-core/src/: crds.rs
haxor-agents/crates/haxor-postgres-agent/: Cargo.toml
haxor-agents/crates/haxor-postgres-agent/src/: deployment_manager.rs  main.rs  templates.rs
haxor-agents/crates/haxor-postgres-agent/src/objects/: cluster-role-admin.yaml  secret.yaml  service.yaml  statefulset.yaml
haxor-agents/sample-application/: builder.ts  shitted-out-yaml.yaml
sample-application/: builder.ts  shitted-out-yaml.yaml
