[workspace]
resolver = "3"
members = [ "crates/haxor-cli","crates/haxor-core", "crates/haxor-postgres-agent"]

[workspace.dependencies]
haxor-core = { path = "./crates/haxor-core" }
tokio = { version = "1", features = ["full"] }
kube = { version = "1.1.0", features = ["runtime"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
anyhow = { version = "1" }
rand = { version = "0.9.1" }
base64 = { version = "0.22.1" }
tera = { version = "1.20.0" }
serde_yaml = { version = "0.9.34" }
lazy_static = { version = "1.5.0" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
