[package]
name = "haxor-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { workspace = true, features = ["runtime", "derive"] }
k8s-openapi = { workspace = true, features = ["latest", "schemars"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
schemars = "0.8.6"
