[package]
name = "haxor-postgres-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
haxor-core.workspace = true
tokio.workspace = true
kube = { workspace = true, features = ["client"] }
k8s-openapi.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
base64.workspace = true
tera.workspace = true
serde_yaml.workspace = true
lazy_static.workspace = true
